# File: pyproject.toml

[project]
name = "f5-tts-vietnamese"
version = "0.1.0"
description = "f5-tts-vietnamese"
requires-python = ">=3.10, <=3.11"
dependencies = [
    # --- Framework chính ---
    "torch==2.3.1", # Pin version để đảm bảo tương thích
    "torchaudio==2.3.1",
    "gradio>=3.45.2",
    "spaces",

    # --- Thư viện xử lý & TTS cốt lõi ---
    "accelerate>=0.33.0",
    "bitsandbytes>0.37.0",
    "cached_path",
    "huggingface_hub",
    "hydra-core>=1.3.0",
    "librosa",
    "numpy<=1.26.4", # Giữ nguyên ràng buộc quan trọng
    "pydub",
    "pypinyin",
    "safetensors",
    "soundfile",
    "torchdiffeq",
    "tqdm>=4.65.0",
    "transformers",
    "vocos",
    "x_transformers>=1.31.14",
	"wandb",
	"click",
    "ema_pytorch>=0.5.2",
    "datasets",
    # --- Thư viện xử lý ngôn ngữ Tiếng Việt ---
    "vinorm",
    "jieba",
    "viphoneme",
    #"underthesea",
    "eng_to_ipa",
    "phonemizer",

    # --- Các thư viện phụ trợ khác ---
    "matplotlib",
    "tomli",
    "transformers_stream_generator" # Có thể cần cho một số model
]


# --- GIẢI PHÁP TRIỆT ĐỂ CHO LỖI BUILD ---
# Tự động cài các gói cần thiết để build các thư viện viết bằng Rust
[tool.uv.extra-build-dependencies]
tokenizers = ["maturin"]
underthesea-core = ["maturin"]