[project]
name = "resemble-enhance-windows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "triton==2.1.0",
    "deepspeed>=0.14.4",
    "ipython>=9.2.0",
    "celluloid>=0.2.0",
    "librosa>=0.10.1",
    "matplotlib>=3.8.1",
    "numpy>=1.26.2,<2.0",
    "omegaconf>=2.3.0",
    "pandas>=2.1.3",
    "ptflops>=0.7.1.2",
    "rich>=13.7.0",
    "scipy>=1.11.4",
    "soundfile>=0.12.1",
    "torch>=2.1.1",	
	"torchaudio>=2.1.1",
	"torchvision>=0.16.1",
    "tqdm>=4.66.1",
    "resampy>=0.4.2",
    "tabulate>=0.8.10",
    "gradio>=5.30.0",
    "loguru>=0.7.3",
    "numba>=0.58.0",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }


# deepspeed = { path = "./wheels/deepspeed-0.11.2+cuda118-cp311-cp311-win_amd64.whl" }
triton = { path = "./wheels/triton-2.1.0-cp311-cp311-win_amd64.whl" }

[tool.setuptools.packages.find]
include = ["resemble_enhance*"]

# https://github.com/daswer123/xtts-webui/releases/download/deepspeed/deepspeed-0.11.2+cuda118-cp311-cp311-win_amd64.whl
# https://huggingface.co/madbuda/triton-windows-builds/resolve/main/triton-2.1.0-cp311-cp311-win_amd64.whl?download=true